# echoes

./: README.md  pyproject.toml
core/: urls.py  views.py
core/templates/: about.html  base.html  example.html  index.html  simple_page.html
core/templates/account/: login.html
core/views/: __init__.py  plain_text.py
echoes_cms/: auth.py  settings.py  urls.py
