[tool.poetry]
name = "echoes"
version = "0.1.0"
description = "Django website for storing (and generating printed versions of) accounts of PLVs from Empire LRP."
authors = ["Bouteillebleu"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
django-sortedm2m = "^3.1.1"
django-debug-toolbar = "^3.4.0"
django-allauth = "^0.51.0"
django-login-required-middleware = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
